--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 </head>
 
 <body>
-
+  <!-- header -->
   <header>
     <a href="index.html"><img class="logo" src="photos/treelogo.svg" alt="logo"></a>
 
+<!-- navigation -->
     <nav>
       <ul>
         <li>Home</li>
@@ -29,8 +30,16 @@
     <button class="header_button">
       Bergabung
     </button>
-    
   </header>
+  <!-- section 1 -->
+  <section class="section1">
+    <h2 class="section1_heading">Tentang Kami</h2>
+    <p class="paragraph1">BERTUMBUH adalah organisasi non-profit yang mempunyai tujuan untuk Melindungi, menjaga, merawat, dan melestarikan pohon-pohon yang ada di dunia serta kami akan terus menjaga kestabilan bumi lewat penanaman dan penghijauan.</p>
+
+    <p class="paragraph2">Lewat penanaman dan penghijauan ini juga kita dapat mencegah berbagai masalah seperti pemanasan global, polusi, banjir, tanah longsor serta terjaganya flora dan dan fauna yang ada di dunia dan oleh dasar ini pula organisasi Bertumbuh dibuat. Kamu juga bisa membantu Bertumbuh dengan cara menjadi relawan, petani serta kamu juga bisa berdonasi untuk mendukung kegiatan oprasional kami</p>
+  
+
+  </section>
 
 </body>
 </html>
