--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       Bergabung
     </button>
   </header>
+
   <!-- section 1 -->
   <section class="section1">
     <h2 class="section1_heading">Tentang Kami</h2>
@@ -38,8 +39,27 @@
 
     <p class="paragraph2">Lewat penanaman dan penghijauan ini juga kita dapat mencegah berbagai masalah seperti pemanasan global, polusi, banjir, tanah longsor serta terjaganya flora dan dan fauna yang ada di dunia dan oleh dasar ini pula organisasi Bertumbuh dibuat. Kamu juga bisa membantu Bertumbuh dengan cara menjadi relawan, petani serta kamu juga bisa berdonasi untuk mendukung kegiatan oprasional kami</p>
   
+  </section>
+
+  <!-- section 2 -->
+  <section class="section2">
+    <img src="photos/Rectangle 104 (1).png" alt="treephoto">
+    <div class="div_section2title">
+      <h2 class="section2_heading">Bersama Lindungi Bumi Kita Untuk Masa Depan</h2>
+      <p class="section2_paragraph">Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua.</p>
+
+      <button class="button_readmore">
+        Read More
+      </button>
+
+    </div>
 
   </section>
+<!-- section 3  -->
+
+<section>
+  
+</section>
 
 </body>
 </html>
