--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400;600;700&family=Cabin:wght@600&family=Inter:wght@300;400;500;600&family=Josefin+Sans:wght@700&family=Montserrat:wght@400;800&family=Nerko+One&family=Playfair+Display:wght@400;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400;600;700&family=Cabin:wght@600&family=Inter:wght@300;400;500;600&family=Josefin+Sans:wght@700&family=Montserrat:wght@400;800&family=Nerko+One&family=Playfair+Display:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/fonts.css">
 </head>
 
@@ -55,11 +55,23 @@
     </div>
 
   </section>
-<!-- section 3  -->
-
-<section>
   
+  <!-- section 3 -->
+  <section class="section3">
+    <h2 class="section3_heading">Berita, Artikel & Event</h2>
+      <div class="div_section3">
+      <img src="photos/unsplash_uD4wymJbp7g (1).png" alt="">
+      <p class="section3_paragraph">Selamatkan Hutan Untuk 
+      </div>
+
+      <div class="div_section4">
+        <img src="photos/unsplash_go75G-7A5jw (1).png" alt="">
+        <p class="section3_paragraph">Selamatkan Hutan Untuk 
+        </div>
+
 </section>
+
+
 
 </body>
 </html>
