--- a/index.html
+++ b/index.html
@@ -55,22 +55,55 @@
     </div>
 
   </section>
-  
+
   <!-- section 3 -->
   <section class="section3">
     <h2 class="section3_heading">Berita, Artikel & Event</h2>
       <div class="div_section3">
       <img src="photos/unsplash_uD4wymJbp7g (1).png" alt="">
-      <p class="section3_paragraph">Selamatkan Hutan Untuk 
+      <p class="section3_paragraph">Selamatkan Hutan Untuk Bumi yang Sehat
       </div>
 
       <div class="div_section4">
         <img src="photos/unsplash_go75G-7A5jw (1).png" alt="">
-        <p class="section3_paragraph">Selamatkan Hutan Untuk 
+        <p class="section3_paragraph">Kegiatan Naik Gunung Ciremai bersama
         </div>
 
 </section>
 
+<!-- footer -->
+
+<footer>
+  <a href="index.html"><img class="footer_logo" src="photos/bigtree.svg" alt="footerlogo"></a>
+  <div class="footer_frame">
+
+  <div class="div_posts class a">
+    <a class="footer_posts" href="">POSTS</a>
+    <a href="">Berita</a>
+    <a class="footer_event" href="">Event</a>
+    <a href="">Blog</a>
+ 
+</div>
+
+<div class="div_posts_middle class a">
+  <a class="footer_posts" href="">Programs</a>
+  <a class=""href="">Jelajah Bersama</a>
+  <a class="footer_event" href="">Tanam Pohon</a>
+  <a href="">Sosialisasi Hutan</a>
+
+</div>
+
+<div class="div_posts class a">
+  <a class="footer_posts" href="">Support</a>
+  <a href="">Contact Us</a>
+  <a class="footer_event" href="">Terms of Service</a>
+  <a href="">Privacy Policy</a>
+
+</div>
+
+</div>
+
+</footer>
 
 
 </body>
